--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>object.oriented.programming</name>
+	<name>study.pillar.oriented.programming</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1623720369776</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
